--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
        function input_typed(){
           sov=select.value;
 
-          iv=input.valu
+          iv=input.value;
            //console.log(input.value)
           // console.log(select.value)
           let weight = iv*planet_weight[planet.indexOf(sov)];  //calculate weight
